--- a/webinars.html
+++ b/webinars.html
@@ -47,7 +47,7 @@
     <a href="#upcoming" class="bg-[var(--light-yellow)] text-gray-900 px-8 py-3 rounded-full text-lg font-semibold hover:bg-yellow-300 transition">
       See Upcoming Webinars
     </a>
-    <a href="/webinar-registration.html" class="mt-6 inline-block bg-purple-700 hover:bg-purple-800 text-white px-6 py-3 rounded-full text-lg font-semibold transition">
+    <a href="webinar-registration.html" class="mt-6 inline-block bg-purple-700 hover:bg-purple-800 text-white px-6 py-3 rounded-full text-lg font-semibold transition">
       Register for a Webinar
     </a>
   </section>
@@ -62,7 +62,7 @@
         <h3 class="text-2xl font-semibold mb-2">The Science of Early Literacy</h3>
         <p class="mb-4">Discover how neuroscience informs effective reading instruction for young learners.</p>
         <p class="text-sm text-gray-600">Date: August 15, 2025 | Time: 5:00 PM GMT</p>
-        <a href="/webinar-registration.html" class="inline-block mt-4 bg-purple-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-purple-700 transition">
+        <a href="webinar-registration.html" class="inline-block mt-4 bg-purple-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-purple-700 transition">
           Register Now
         </a>
       </article>
@@ -71,7 +71,7 @@
         <h3 class="text-2xl font-semibold mb-2">Creative Storytelling for Literacy</h3>
         <p class="mb-4">Learn techniques to engage children’s imagination and boost literacy skills through storytelling.</p>
         <p class="text-sm text-gray-600">Date: September 10, 2025 | Time: 4:00 PM GMT</p>
-        <a href="/webinar-registration.html" class="inline-block mt-4 bg-purple-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-purple-700 transition">
+        <a href="webinar-registration.html" class="inline-block mt-4 bg-purple-600 text-white px-5 py-2 rounded-full font-semibold hover:bg-purple-700 transition">
           Register Now
         </a>
       </article>
