--- a/📄 webinar-registration.html
+++ b/📄 webinar-registration.html
@@ -12,7 +12,7 @@
     <div class="bg-white p-10 rounded-3xl shadow-xl max-w-2xl w-full">
       <h1 class="text-3xl font-bold text-center text-purple-800 mb-6">Register for Our Webinar</h1>
 
-      <form action="https://formspree.io/f/yourFormID" method="POST" class="space-y-6">
+      <form action="https://formspree.io/f/xqalqkyd" method="POST" class="space-y-6">
         <div>
           <label class="block mb-2 font-medium">Full Name</label>
           <input type="text" name="name" required class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-purple-500" />
