--- a/📄 webinar-registration.html
+++ b/📄 webinar-registration.html
@@ -2,43 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Webinar Registration | InnerSpark Studio</title>
-  <link href="styles/tailwind.css" rel="stylesheet" /> <!-- ✅ No ../ needed -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Register for Webinar</title>
+  <link href="styles/tailwind.css" rel="stylesheet" />
 </head>
-<body class="bg-purple-50 text-gray-800">
-
-  <section class="min-h-screen flex items-center justify-center py-16 px-6">
-    <div class="bg-white p-10 rounded-3xl shadow-xl max-w-2xl w-full">
-      <h1 class="text-3xl font-bold text-center text-purple-800 mb-6">Register for Our Webinar</h1>
-
-      <form action="https://formspree.io/f/xqalqkyd" method="POST" class="space-y-6">
-        <div>
-          <label class="block mb-2 font-medium">Full Name</label>
-          <input type="text" name="name" required class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-purple-500" />
-        </div>
-        <div>
-          <label class="block mb-2 font-medium">Email Address</label>
-          <input type="email" name="email" required class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-purple-500" />
-        </div>
-        <div>
-          <label class="block mb-2 font-medium">School / Organization</label>
-          <input type="text" name="organization" class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-purple-500" />
-        </div>
-        <div>
-          <label class="block mb-2 font-medium">Message</label>
-          <textarea name="message" rows="4" class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-purple-500"></textarea>
-        </div>
-
-        <!-- ✅ thank-you.html is in same folder -->
-        <input type="hidden" name="_next" value="thank-you.html" />
-
-        <button type="submit" class="w-full bg-purple-700 text-white font-bold py-3 rounded-lg hover:bg-purple-800 transition">
-          Submit Registration
-        </button>
-      </form>
-    </div>
-  </section>
-
+<body class="bg-purple-50 flex items-center justify-center min-h-screen">
+  <form action="https://formspree.io/f/xqalqkyd" method="POST" class="bg-white p-10 rounded-3xl shadow-xl max-w-xl w-full space-y-4">
+    <h1 class="text-2xl font-bold text-purple-700 mb-4">Register</h1>
+    <input type="text" name="name" placeholder="Full Name" required class="w-full border rounded-lg p-3" />
+    <input type="email" name="email" placeholder="Email" required class="w-full border rounded-lg p-3" />
+    <input type="hidden" name="_next" value="thank-you.html" />
+    <button type="submit" class="w-full bg-purple-700 text-white py-3 rounded-lg hover:bg-purple-800">Submit</button>
+  </form>
 </body>
 </html>
