--- a/hiring.html
+++ b/hiring.html
@@ -28,18 +28,21 @@
 </head>
 <body class="antialiased">
 
-  <!-- Navbar -->
-  <header class="bg-white shadow-md py-4 px-6 flex justify-between items-center sticky top-0 z-50">
-    <a href="index.html" class="text-2xl font-bold text-purple-800 hover:text-purple-600">InnerSpark Studio</a>
-    <nav class="space-x-6 text-sm text-gray-700 hidden md:flex">
-      <a href="index.html#about" class="hover:text-purple-600">Welcome</a>
-      <a href="index.html#programs" class="hover:text-purple-600">Programs</a>
-      <a href="index.html#shop" class="hover:text-purple-600">Buy Books</a>
-      <a href="index.html#gallery" class="hover:text-purple-600">Gallery</a>
-      <a href="index.html#webinars" class="hover:text-purple-600">Webinars</a>
-      <a href="hiring.html" class="font-semibold text-purple-800 underline">Join Our Team</a>
-      <a href="index.html#contact" class="hover:text-purple-600">Contact</a>
-    </nav>
+   <!-- Navigation Bar -->
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
+      <a href="index.html" class="text-xl font-bold text-purple-700">InnerSpark Studio</a>
+      <nav class="hidden md:flex space-x-6 text-sm font-medium text-gray-700">
+        <a href="index.html#about" class="hover:text-purple-600 transition">Our mission</a>
+        <a href="index.html#programs" class="hover:text-purple-600 transition">Who we serve</a>
+        <a href="index.html#programs" class="hover:text-purple-600 transition">Programs</a>
+        <a href="index.html#explore-books" class="hover:text-purple-600 transition">Explore Our Books</a>
+        <a href="webinars.html" class="hover:text-purple-600 transition font-semibold text-purple-700">Webinars</a>
+        <a href="index.html#gallery" class="hover:text-purple-600 transition">Gallery</a>
+        <a href="index.html#gallery" class="hover:text-purple-600 transition">Join Our Team</a>
+        <a href="index.html#contact" class="hover:text-purple-600 transition">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <!-- Hiring Section -->
