--- a/hiring.html
+++ b/hiring.html
@@ -37,9 +37,9 @@
         <a href="index.html#programs" class="hover:text-purple-600 transition">Who we serve</a>
         <a href="index.html#programs" class="hover:text-purple-600 transition">Programs</a>
         <a href="index.html#explore-books" class="hover:text-purple-600 transition">Explore Our Books</a>
-        <a href="webinars.html" class="hover:text-purple-600 transition font-semibold text-purple-700">Webinars</a>
+        <a href="webinars.html" class="hover:text-purple-600 transition">Webinars</a>
         <a href="index.html#gallery" class="hover:text-purple-600 transition">Gallery</a>
-        <a href="index.html#gallery" class="hover:text-purple-600 transition">Join Our Team</a>
+        <a href="index.html#gallery" class="hover:text-purple-600 transition font-semibold text-purple-700">Join Our Team</a>
         <a href="index.html#contact" class="hover:text-purple-600 transition">Contact</a>
       </nav>
     </div>
