--- a/📄 webinar-registration.html
+++ b/📄 webinar-registration.html
@@ -11,7 +11,7 @@
     <h1 class="text-2xl font-bold text-purple-700 mb-4">Register</h1>
     <input type="text" name="name" placeholder="Full Name" required class="w-full border rounded-lg p-3" />
     <input type="email" name="email" placeholder="Email" required class="w-full border rounded-lg p-3" />
-    <input type="hidden" name="_next" value="thank-you.html" />
+    <input type="hidden" name="_next" value="/thank-you.html" />
     <button type="submit" class="w-full bg-purple-700 text-white py-3 rounded-lg hover:bg-purple-800">Submit</button>
   </form>
 </body>
