--- a/📄 webinar-registration.html
+++ b/📄 webinar-registration.html
@@ -7,11 +7,20 @@
   <link href="styles/tailwind.css" rel="stylesheet" />
 </head>
 <body class="bg-purple-50 flex items-center justify-center min-h-screen">
-  <form action="https://formspree.io/f/xqalqkyd" method="POST" class="bg-white p-10 rounded-3xl shadow-xl max-w-xl w-full space-y-4">
-    <h1 class="text-2xl font-bold text-purple-700 mb-4">Register</h1>
-    <input type="text" name="name" placeholder="Full Name" required class="w-full border rounded-lg p-3" />
-    <input type="email" name="email" placeholder="Email" required class="w-full border rounded-lg p-3" />
-    <button type="submit" class="w-full bg-purple-700 text-white py-3 rounded-lg hover:bg-purple-800">Submit</button>
-  </form>
+ <form
+  action="https://formspree.io/f/xqalqkyd"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 </body>
 </html>
